added auto generating delivery person feature

--- a/src/app/authentication/authentication.component.scss
+++ b/src/app/authentication/authentication.component.scss
@@ -198,7 +198,7 @@
 
         .action-section {
             margin-top: 30px !important;
-            height: auto !important;
+            height: 80% !important;
         }
 
         .left-section {
