--- a/src/app/dashboard/delivery-person/delivery-person.component.html
+++ b/src/app/dashboard/delivery-person/delivery-person.component.html
@@ -3,7 +3,7 @@
         <div class="refresh-section d-flex justify-content-between align-items-center">
             <div>
                 <div class="line1">{{computedData?.deliveryPersonList?.length}}
-                    {{isSearching? 'Results found':'Delivery Boys'}}
+                    {{isSearching? 'Results found':'Delivery Persons'}}
                 </div>
                 <div class="line2">Updated <span>{{computedData?.lastUpdatedStr}} </span>
                     <span class="refresh" (click)="refreshDeliveryPersonData(true)"
