--- a/src/app/dashboard/new-entry/new-entry.component.html
+++ b/src/app/dashboard/new-entry/new-entry.component.html
@@ -7,7 +7,7 @@
             <div class="pt-2 box-input">
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Date</mat-label>
-                    <input matInput [matDatepicker]="picker" formControlName="date">
+                    <input matInput [matDatepicker]="picker" formControlName="date" (focus)="onfocus('date')">
                     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
@@ -15,57 +15,76 @@
             <div class="pt-2 box-input">
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Units Sent</mat-label>
-                    <input matInput placeholder="5" [maxLength]="3" autocomplete="off" formControlName="unitsSent">
+                    <input matInput placeholder="5" [maxLength]="3" autocomplete="off" formControlName="unitsSent"
+                        (focus)="onfocus('unitsSent')">
                 </mat-form-field>
             </div>
             <div class="pt-2 box-input">
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Units Recieved</mat-label>
-                    <input matInput placeholder="5" [maxLength]="3" autocomplete="off" formControlName="unitsRecieved">
+                    <input matInput placeholder="5" [maxLength]="3" autocomplete="off" formControlName="unitsRecieved"
+                        (focus)="onfocus('unitsRecieved')">
                 </mat-form-field>
             </div>
             <div class="pt-2 box-input">
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Rate/Unit</mat-label>
-                    <input matInput placeholder="1400" [maxLength]="10" autocomplete="off" formControlName="rate">
+                    <input matInput placeholder="1400" [maxLength]="10" autocomplete="off" formControlName="rate"
+                        (focus)="onfocus('rate')">
                 </mat-form-field>
             </div>
             <div class="pt-2 box-input">
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Paid Amount</mat-label>
-                    <input matInput placeholder="1400" [maxLength]="10" autocomplete="off" formControlName="paidAmt">
+                    <input matInput placeholder="1400" [maxLength]="10" autocomplete="off" formControlName="paidAmt"
+                        (focus)="onfocus('paidAmt')">
                 </mat-form-field>
             </div>
         </div>
         <div class="mt-3 bold-text">Please provide the delivery boy details.</div>
         <div class="gap d-flex w-100 flex-wrap">
-            <div class="pt-2 box-input-half">
+            <div class="pt-2 box-input-half p-relative">
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Full Name</mat-label>
                     <input matInput placeholder="Ankit Pushp" [maxLength]="30" autocomplete="off"
-                        formControlName="deliveryBoyName">
+                        formControlName="deliveryBoyName" (focus)="onfocus('deliveryBoyName')">
                 </mat-form-field>
+                {{deliveryBoySelected}}
+                <div class="select-dropdown"
+                    *ngIf="deliveryBoysSearchList.length > 0 && focusedFormName === 'deliveryBoyName'">
+                    <div class="profile" *ngFor="let obj of deliveryBoysSearchList" (click)="onSelectDeliveryBoy(obj)">
+                        {{obj.data?.fullName}}
+                        <span *ngIf="obj.data?.phoneNumber">({{formatNumber(obj.data?.phoneNumber)}})</span>
+                    </div>
+                </div>
             </div>
-            <div class="pt-2 box-input-half">
+            <div class="pt-2 box-input-half p-relative">
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Phone Number</mat-label>
                     <input matInput placeholder="xxxx xxx xxx" prefix="+91 " [maxLength]="16" autocomplete="off"
-                        mask="0000 000 000" formControlName="deliveryBoyNumber">
+                        mask="0000 000 000" formControlName="deliveryBoyNumber" (focus)="onfocus('deliveryBoyNumber')">
                 </mat-form-field>
+                <div class="select-dropdown"
+                    *ngIf="deliveryBoysSearchList.length > 0 && focusedFormName === 'deliveryBoyNumber'">
+                    <div class="profile" *ngFor="let obj of deliveryBoysSearchList" (click)="onSelectDeliveryBoy(obj)">
+                        {{obj.data?.fullName}}
+                        <span *ngIf="obj.data?.phoneNumber">({{formatNumber(obj.data?.phoneNumber)}})</span>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="pt-2 mt-1">
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Address</mat-label>
                 <input matInput placeholder="ABC Lane, XYZ Road 132002" autocomplete="off"
-                    formControlName="deliveryBoyAddress">
+                    formControlName="deliveryBoyAddress" (focus)="onfocus('deliveryBoyAddress')">
             </mat-form-field>
         </div>
         <div class="pt-2 mt-1">
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Extra details</mat-label>
                 <input matInput placeholder="Payment might be delayed..." autocomplete="off"
-                    formControlName="extraDetails">
+                    formControlName="extraDetails" (focus)="onfocus('extraDetails')">
             </mat-form-field>
         </div>
     </form>
