--- a/src/app/dashboard/new-entry/new-entry.component.scss
+++ b/src/app/dashboard/new-entry/new-entry.component.scss
@@ -36,6 +36,33 @@
         .box-input-half {
             flex: 1 0 45%;
         }
+
+        .p-relative {
+            position: relative;
+        }
+
+        .select-dropdown {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 100%;
+            background-color: white;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+            border: 1px solid gray;
+            z-index: 10;
+            max-height: 250px;
+            overflow-y: auto;
+
+            .profile {
+                padding: 5px 10px;
+                border-bottom: 1px dotted black;
+
+                &:hover {
+                    background-color: $border-very-light2;
+                    cursor: pointer;
+                }
+            }
+        }
     }
 
     .error-msg {
