--- a/src/app/dashboard/delivery-person/delivery-person.component.html
+++ b/src/app/dashboard/delivery-person/delivery-person.component.html
@@ -36,7 +36,7 @@
     <div *ngIf="addNewDeliveryBoy" class="details-section">
         <app-new-account (onCancel)="addNewDeliveryBoy=false" (onSubmit)="refreshDeliveryPersonData()"
             userType="deliveryPerson" [editProfileId]="selectedDeliveryPerson?.data?.userId"
-            [isEditingProfile]="isEditingProfile">
+            [isEditingProfile]="isEditingProfile" (onDelete)="onDeleteProfile(selectedDeliveryPerson?.data?.userId)">
         </app-new-account>
     </div>
     <div *ngIf="selectedDeliveryPerson && !addNewDeliveryBoy" class="details-section d-flex flex-column">
