--- a/src/app/dashboard/new-account/new-account.component.html
+++ b/src/app/dashboard/new-account/new-account.component.html
@@ -1,7 +1,9 @@
 <div class="new-user-container">
-    <div class="heading bold-text">Add New {{userLabel}}</div>
+    <div class="heading bold-text">{{isEditingProfile?'Update':'Add New'}}
+        {{isCustomerType?'Customer profile':'Delivery person'}}</div>
     <div>Please provide the following account details.</div>
-    <div class="mt-1 small-text secondary-color">{{userLabel}} ID: {{accountId}}</div>
+    <div class="mt-1 small-text secondary-color">{{isCustomerType? 'Customer':'Delivery person'}} ID: {{accountId}}
+    </div>
 
     <form [formGroup]="accountForm" class="user-form">
         <div class="mt-3 pt-2">
@@ -25,7 +27,7 @@
         </div>
         <div class="mt-3">
             <mat-form-field appearance="outline" class="w-100">
-                <mat-label>{{userLabel}} Address.</mat-label>
+                <mat-label>{{isCustomerType?'Customer':'Delivery Person'}} Address.</mat-label>
                 <textarea matInput placeholder="ABC Lane, XYZ Road 132002" autocomplete="off" formControlName="address"
                     class="limit-textarea-1"></textarea>
             </mat-form-field>
@@ -48,7 +50,11 @@
     <div class="mt-3 justify-content-between d-flex user-form">
         <button mat-flat-button (click)="saveAccountData()" class="custom-btn"
             [disabled]="disableSave || accountForm.invalid">Save</button>
-        <button class="cancel-btn custom-btn" mat-flat-button (click)="cancelClicked()"
-            [disabled]="disableSave">Cancel</button>
+        <div>
+            <button class="cancel-btn custom-btn me-2" mat-flat-button (click)="deleteClicked()"
+                [disabled]="disableSave">Delete</button>
+            <button class="cancel-btn custom-btn" mat-flat-button (click)="cancelClicked()"
+                [disabled]="disableSave">Cancel</button>
+        </div>
     </div>
 </div>
