--- a/src/app/common/notification/notification.component.html
+++ b/src/app/common/notification/notification.component.html
@@ -1,9 +1,11 @@
-<div class="notification-container" *ngIf="notificationService.notification$ | async as notification"
-    [ngStyle]="{'background-color':notification?.backgroundColor,'color':notification?.textColor,'border-left-color':notification?.leftBarColor}">
-    <div class="bold-text">
-        {{notification?.heading}}
-    </div>
-    <div class="message small-text" *ngIf="notification?.message">
-        {{notification?.message}}
+<div class="notification-container">
+    <div class="notification-card mb-2" *ngFor="let notification of notificationService.notification$ | async"
+        [ngStyle]="{'background-color':notification?.backgroundColor,'color':notification?.textColor,'border-left-color':notification?.leftBarColor}">
+        <div class="bold-text">
+            {{notification?.heading}}
+        </div>
+        <div class="message small-text" *ngIf="notification?.message">
+            {{notification?.message}}
+        </div>
     </div>
 </div>
