--- a/src/app/common/notification/notification.component.scss
+++ b/src/app/common/notification/notification.component.scss
@@ -3,19 +3,20 @@
 .notification-container {
     z-index: 9999;
     font-family: "Comfortaa", serif;
-
     position: fixed;
     top: 90px;
     right: 25px;
-    background-color: $light-color;
-    padding: 10px 20px 10px 20px;
-    min-width: 250px;
-    max-width: 500px;
-    border-radius: 5px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-    animation: faideInOut 5s ease-in-out;
 
-    border-left: 5px solid $primary-mat-color;
+    .notification-card {
+        background-color: $light-color;
+        padding: 10px 20px 10px 20px;
+        min-width: 250px;
+        max-width: 500px;
+        border-radius: 5px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+        animation: faideInOut 5s ease-in-out;
+        border-left: 5px solid $primary-mat-color;
+    }
 
     .message {
         max-width: 300px;
