--- a/src/app/dashboard/entry-data-table/entry-data-table.component.html
+++ b/src/app/dashboard/entry-data-table/entry-data-table.component.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="w-100 table-div">
-        <table *ngIf="processedTableData && processedTableData.length>0" mat-table [dataSource]="processedTableData"
+        <table *ngIf="processedTableData && processedTableData.length>0" mat-table [dataSource]="dataSource"
             class="custom-table">
             <tr mat-header-row *matHeaderRowDef="displayedColumns()" class="custom-header-row nowrap"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns();" class="custom-row"></tr>
@@ -40,6 +40,8 @@
                 </td>
             </ng-container>
         </table>
+        <mat-paginator *ngIf="processedTableData && processedTableData.length>5" [pageSizeOptions]="[5, 10, 20, 40]"
+            showFirstLastButtons></mat-paginator>
     </div>
 
     <div *ngIf="(!processedTableData || processedTableData.length === 0) && !newEntry"
