--- a/src/app/dashboard/entry-data-table/entry-data-table.component.scss
+++ b/src/app/dashboard/entry-data-table/entry-data-table.component.scss
@@ -31,6 +31,13 @@
             }
         }
 
+        .disabled-entry-btn {
+            padding: 0px 20px;
+            background-color: $border-very-light;
+            color: $border-light;
+            cursor: not-allowed;
+        }
+
         .custom-btn {
             font-family: "Comfortaa", serif;
             border-radius: 5px;
