--- a/src/app/dashboard/new-entry/new-entry.component.html
+++ b/src/app/dashboard/new-entry/new-entry.component.html
@@ -47,7 +47,7 @@
             <div class="pt-2 box-input-half p-relative">
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Full Name</mat-label>
-                    <input matInput placeholder="Ankit Pushp" [maxLength]="30" autocomplete="off"
+                    <input matInput placeholder="Ankit" [maxLength]="30" autocomplete="off"
                         formControlName="deliveryBoyName" (focus)="onfocus('deliveryBoyName')">
                 </mat-form-field>
                 <div class="select-dropdown"
