--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-@import '../src/assets/styles/color.scss';
+@import 'assets/styles/color.scss';
 
 html {
   @include mat.theme((color: (theme-type: light,
@@ -48,6 +48,10 @@ body {
 
 .large-text {
   font-size: 26px;
+}
+
+.heading {
+  font-size: 28px;
 }
 
 .link-text {
