--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -10,25 +10,25 @@
     <div class="d-flex align-items-center flex-wrap gap-15 justify-content-between">
         <input class="capsule search-box" type="text" placeholder="Search in inventory" (input)="onSearch($event)">
         <div class="d-flex align-items-center flex-wrap gap-15">
-            <div class="capsule min-width-200 hover-action" [ngClass]="{'danger':pendingUnit>0}">
-                <span class="bold-text me-2">Pending Units:</span>
-                <span class="secondary-color">{{pendingUnit}}</span>
-            </div>
-            <div class="capsule min-width-200 hover-action" [ngClass]="{'danger':dueAmount>0}">
-                <span class="bold-text me-2">Due Amount:</span>
-                <span class="secondary-color">{{dueAmount | number: '1.2-2'}} Rs</span>
-            </div>
             <div class="capsule entry-btn" (click)="newEntry=!newEntry">
                 <span class="bold-text">{{newEntry?'Cancel':'New Entry'}}</span>
             </div>
             <div class="capsule" (click)="refreshData()" [ngClass]="isRefreshing?'disabled-entry-btn':'entry-btn'">
                 <span class="bold-text">{{isRefreshing?'Refreshing...':'Refresh'}}</span>
             </div>
+            <div class="capsule hover-action" [ngClass]="{'danger':dueAmount>0}">
+                <span class="bold-text me-2">Due Amount:</span>
+                <span class="secondary-color">{{dueAmount | number: '1.2-2'}} Rs</span>
+            </div>
+            <div class="capsule hover-action" [ngClass]="{'danger':pendingUnit>0}">
+                <span class="bold-text me-2">Pending Units:</span>
+                <span class="secondary-color">{{pendingUnit}}</span>
+            </div>
         </div>
     </div>
 
     <div class="w-100 table-div mt-4">
-        <table *ngIf="processedTableData && processedTableData.length>0" mat-table [dataSource]="dataSource"
+        <table *ngIf="dataSource.data && dataSource.data.length>0" mat-table [dataSource]="dataSource"
             class="custom-table">
             <tr mat-header-row *matHeaderRowDef="displayedColumns()" class="custom-header-row nowrap"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns();" class="custom-row"></tr>
@@ -42,16 +42,16 @@
                 </td>
             </ng-container>
         </table>
-        <mat-paginator *ngIf="processedTableData && processedTableData.length>10"
-            [pageSizeOptions]="[10, 20, 50, 80, 100]" showFirstLastButtons></mat-paginator>
+        <mat-paginator *ngIf="dataSource.data && dataSource.data.length>10" [pageSizeOptions]="[10, 20, 50, 80, 100]"
+            showFirstLastButtons></mat-paginator>
     </div>
 
-    <div *ngIf="(!processedTableData || processedTableData.length === 0) && !newEntry"
+    <div *ngIf="(!dataSource.data || dataSource.data.length === 0) && !newEntry"
         class="flex-grow-1 d-flex justify-content-center align-items-center flex-column">
         <img src="assets/images/banner/no-result.png" alt="">
         <div class="m-4 text-center bold-text">
-            No entries to show!
-            <div class="secondary-color mt-1">
+            {{isSearching? 'No Search result found!':'No entries to show!'}}
+            <div class="secondary-color mt-1" *ngIf="!isSearching">
                 Please add new entries!
             </div>
         </div>
