--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -1,7 +1,7 @@
 <div class="authentication-container d-flex h-100">
     <div class="left-section h-100">
-        <img src="assets/images/icons/favicon.png" height="40px" alt="Fuel Flow Icon" class="me-2 fire-icon">
-        <img src="assets/images/logo/banner_1.png" height="40px" alt="Fuel Flow Logo">
+        <img src="assets/images/icons/favicon.png" alt="Fuel Flow Icon" class="me-2 fire-icon">
+        <img src="assets/images/logo/banner_1.png" alt="Fuel Flow Logo" class="logo-text">
         <div id="recaptcha-container"></div>
 
         <div class="action-section d-flex flex-column h-100" *ngIf="isLogin">
