--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,12 @@
 <div class="dashboard-container flex-column">
     <div class="top-navbar justify-content-between d-flex">
         <div class="align-self-center fire-icon">
-            <img src="assets/images/icons/favicon.png" height="40px" alt="Fuel Flow Icon" class="me-2">
-            <img src="assets/images/logo/banner_1.png" height="30px" alt="Fuel Flow Logo" title="Fuel Flow India">
+            <img src="assets/images/icons/favicon.png" height="40px" alt="Fuel Flow Icon" class="me-2 logo-icon">
+            <img src="assets/images/logo/banner_1.png" height="30px" alt="Fuel Flow Logo" title="Fuel Flow India"
+                class="logo-text">
         </div>
 
-        <div class="d-flex">
+        <div class="d-flex navbar-actions">
             <input class="search-box align-self-center" type="text" [placeholder]="'Search in '+activeNavMenu"
                 *ngIf="(activeNavMenu === 'customers' && hasCustomerData() || activeNavMenu === 'delivery' && hasDeliveryPersonData())"
                 (input)="onSearch($event)">
