--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -107,7 +107,15 @@
     }
 
     @media (max-width: 1024px) {
+        .top-navbar {
+            .logo-text {
+                display: none;
+            }
+        }
+
         .nav-item-bar {
+            z-index: 2;
+
             .nav-item {
                 margin-left: 25px;
             }
@@ -116,6 +124,19 @@
 
     @media (max-width: 425px) {
         .top-navbar {
+            padding-left: 15px;
+            padding-right: 15px;
+
+            .logo-text,
+            .logo-icon {
+                display: none;
+            }
+
+            .navbar-actions {
+                width: 100%;
+                justify-content: space-between;
+            }
+
             .other-menu-card {
                 min-width: 200px;
             }
