--- a/src/app/dashboard/new-account/new-account.component.html
+++ b/src/app/dashboard/new-account/new-account.component.html
@@ -1,7 +1,7 @@
 <div class="new-user-container">
-    <div class="heading bold-text">{{isEditingProfile?'Update':'Add New'}}
+    <div class="heading bold-text nowrap">{{isEditingProfile?'Update':'Add New'}}
         {{isCustomerType?'Customer profile':'Delivery person'}}</div>
-    <div>Please provide the following account details.</div>
+    <div class="nowrap">Please provide the following account details.</div>
     <div class="mt-1 small-text secondary-color">{{isCustomerType? 'Customer':'Delivery person'}} ID: {{accountId}}
     </div>
 
@@ -47,7 +47,7 @@
             </mat-form-field>
         </div>
     </form>
-    <div class="mt-3 justify-content-between d-flex user-form">
+    <div class="mt-3 justify-content-between d-flex button-section">
         <button mat-flat-button (click)="saveAccountData()" class="custom-btn"
             [disabled]="disableSave || accountForm.invalid">Save</button>
         <div>
