--- a/src/app/dashboard/inventory/inventory.component.scss
+++ b/src/app/dashboard/inventory/inventory.component.scss
@@ -1,130 +1,142 @@
 @import "../../../assets/styles/color.scss";
 
-.inventory-container {
-    user-select: none;
-    padding: 20px 40px 0px 40px;
+.parent-inventory {
+    overflow-y: auto;
 
-    .gap-15 {
-        gap: 15px;
-    }
+    .inventory-container {
+        user-select: none;
+        padding: 20px 40px 0px 40px;
+        max-height: calc(100vh - 70px);
+        min-width: 500px;
 
-    .capsule {
-        height: 40px;
-        border-radius: 20px;
-        padding: 5px 15px;
-        border: 0px;
-        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-        box-sizing: border-box;
-        display: flex;
-        align-items: center;
-
-        &.min-width-200 {
-            min-width: 200px;
+        .gap-15 {
+            gap: 15px;
         }
 
-        &.hover-action {
-            &:hover {
+        .capsule {
+            height: 40px;
+            border-radius: 20px;
+            padding: 5px 15px;
+            border: 0px;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+            box-sizing: border-box;
+            display: flex;
+            align-items: center;
+
+            &.min-width-200 {
+                min-width: 200px;
+            }
+
+            &.hover-action {
+                &:hover {
+                    background-color: $border-very-light;
+                }
+            }
+
+            &.danger {
+                border-bottom: 3px solid $primary-web-red;
+            }
+
+            &.entry-btn {
+                &:hover {
+                    background-color: $primary-mat-color;
+                    cursor: pointer;
+                    color: white;
+                }
+            }
+
+            &.export-btn {
+                &:hover {
+                    background-color: $excel-color;
+                    cursor: pointer;
+                    color: white;
+                }
+            }
+
+            &.disabled-entry-btn {
+                background-color: $border-very-light;
+                color: $border-light;
+                cursor: not-allowed;
+            }
+
+            &.search-box {
+                outline: none;
+            }
+        }
+
+
+        .custom-table {
+            .custom-header-row {
+                background-color: $border-light;
+            }
+
+            .custom-row:nth-child(even) {
                 background-color: $border-very-light;
             }
-        }
 
-        &.danger {
-            border-bottom: 3px solid $primary-web-red;
-        }
+            .custom-header-cell {
+                font-family: "Comfortaa", serif;
+            }
 
-        &.entry-btn {
-            &:hover {
-                background-color: $primary-mat-color;
-                cursor: pointer;
-                color: white;
+            .custom-mat-cell {
+                font-family: "Comfortaa", serif;
+            }
+
+            .text-right {
+                text-align: end
+            }
+
+            .name-text {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                color: $primary-mat-color;
+
+                &:hover {
+                    cursor: pointer;
+                    text-decoration: underline;
+                }
+            }
+
+            .nowrap {
+                white-space: nowrap;
             }
         }
 
-        &.export-btn {
-            &:hover {
-                background-color: $excel-color;
-                cursor: pointer;
-                color: white;
-            }
-        }
-
-        &.disabled-entry-btn {
-            background-color: $border-very-light;
-            color: $border-light;
-            cursor: not-allowed;
-        }
-
-        &.search-box {
-            outline: none;
+        .table-div {
+            overflow-y: auto;
         }
     }
 
+    .new-full-entry {
+        z-index: 2;
+        font-family: "Comfortaa", serif;
 
-    .custom-table {
-        .custom-header-row {
-            background-color: $border-light;
-        }
+        width: 100vw;
+        height: calc(100vh - 70px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-        .custom-row:nth-child(even) {
-            background-color: $border-very-light;
-        }
+        position: fixed;
+        background-color: rgb(0, 0, 0, 0.3);
+        backdrop-filter: blur(5px);
 
-        .custom-header-cell {
-            font-family: "Comfortaa", serif;
-        }
+        .model-box {
+            width: 50%;
+            max-height: 95%;
+            overflow-y: auto;
 
-        .custom-mat-cell {
-            font-family: "Comfortaa", serif;
-        }
-
-        .text-right {
-            text-align: end
-        }
-
-        .name-text {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            color: $primary-mat-color;
-
-            &:hover {
-                cursor: pointer;
-                text-decoration: underline;
-            }
-        }
-
-        .nowrap {
-            white-space: nowrap;
+            background-color: white;
+            border-radius: 20px;
+            padding: 20px 30px 20px 30px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
         }
     }
 
-    .table-div {
-        overflow-y: auto;
-    }
-}
-
-.new-full-entry {
-    z-index: 2;
-    font-family: "Comfortaa", serif;
-
-    width: 100vw;
-    height: calc(100vh - 70px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    position: fixed;
-    background-color: rgb(0, 0, 0, 0.3);
-    backdrop-filter: blur(5px);
-
-    .model-box {
-        width: 50%;
-        max-height: 95%;
-        overflow-y: auto;
-
-        background-color: white;
-        border-radius: 20px;
-        padding: 20px 30px 20px 30px;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    @media (max-width: 1024px) {
+        .inventory-container {
+            padding: 20px 20px 0px 20px;
+        }
     }
 }
