--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
         <div class="align-self-center fire-icon">
             <img src="assets/images/icons/favicon.png" height="40px" alt="Fuel Flow Icon" class="me-2 logo-icon">
             <img src="assets/images/logo/banner_1.png" height="30px" alt="Fuel Flow Logo" title="Fuel Flow India"
-                class="logo-text">
+                [ngClass]="activeNavMenu === 'inventory' ? 'logo-text-inventory' : 'logo-text-normal'">
         </div>
 
         <div class="d-flex navbar-actions">
@@ -19,7 +19,7 @@
                 </ng-container>
             </div>
 
-            <div (click)="showMenuCardInfo =! showMenuCardInfo" class="profie align-self-center">
+            <div (click)="showMenuCardInfo =! showMenuCardInfo" #profileIcon class="profie align-self-center">
                 <img class="profile-image" title="Profile" *ngIf="!profilePicLink && adminProfileData?.male"
                     src="assets/images/svg/profile_male.svg" alt="Male profile Image">
                 <img class="profile-image" title="Profile" *ngIf="!profilePicLink && !adminProfileData?.male"
