completed other components

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,7 @@
-<p>profile works!</p>
+<div class="profile-container">
+    <div class="d-flex align-items-center flex-column under-development">
+        <img src="assets/images/banner/no-result.png" alt="">
+        <div class="m-4 text-center bold-text">Page Under Development.<br>Thank you for your patience.
+        </div>
+    </div>
+</div>
