--- a/src/app/dashboard/customer/customer.component.html
+++ b/src/app/dashboard/customer/customer.component.html
@@ -31,7 +31,7 @@
     </div>
 
     <div *ngIf="addNewCustomer" class="details-section">
-        <app-new-account (onCancel)="addNewCustomer=false" (onSubmit)="refreshCustomerData()" userType="customer"
+        <app-new-account (onCancel)="addNewCustomer=false" userType="customer"
             [editProfileId]="selectedCustomer?.data?.userId" [isEditingProfile]="isEditingProfile"
             (onDelete)="onDeleteProfile(selectedCustomer?.data?.userId)">
         </app-new-account>
