--- a/src/app/dashboard/inventory/inventory.component.scss
+++ b/src/app/dashboard/inventory/inventory.component.scss
@@ -108,35 +108,40 @@
         }
     }
 
-    .new-full-entry {
-        z-index: 2;
-        font-family: "Comfortaa", serif;
-
-        width: 100vw;
-        height: calc(100vh - 70px);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        position: fixed;
-        background-color: rgb(0, 0, 0, 0.3);
-        backdrop-filter: blur(5px);
-
-        .model-box {
-            width: 50%;
-            max-height: 95%;
-            overflow-y: auto;
-
-            background-color: white;
-            border-radius: 20px;
-            padding: 20px 30px 20px 30px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-        }
-    }
-
     @media (max-width: 1024px) {
         .inventory-container {
             padding: 20px 20px 20px 20px;
+        }
+    }
+}
+
+.new-full-entry {
+    z-index: 2;
+    font-family: "Comfortaa", serif;
+
+    width: 100vw;
+    height: calc(100vh - 70px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: fixed;
+    background-color: rgb(0, 0, 0, 0.3);
+    backdrop-filter: blur(5px);
+
+    .model-box {
+        width: 50%;
+        min-width: 700px;
+        max-height: 95%;
+        overflow-y: auto;
+
+        background-color: white;
+        border-radius: 20px;
+        padding: 20px 30px 20px 30px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+
+        @media (max-width: 800px) {
+            min-width: calc(100vw - 60px);
         }
     }
 }
