--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -6,8 +6,8 @@
     </div>
 </div>
 
-<div class="parent-inventory">
-    <div class="inventory-container d-flex flex-column">
+<div class="parent-inventory h-100">
+    <div class="inventory-container d-flex flex-column h-100">
         <div class="d-flex align-items-center flex-wrap gap-15 justify-content-between">
             <input class="capsule search-box flex-grow-1" type="text" placeholder="Search in inventory"
                 (input)="onSearch($event)">
@@ -18,10 +18,12 @@
                 <div class="capsule" (click)="refreshData()" [ngClass]="isRefreshing?'disabled-entry-btn':'entry-btn'">
                     <span class="bold-text">{{isRefreshing?'Refreshing...':'Refresh'}}</span>
                 </div>
-                <div class="capsule export-btn" (click)="export('excel')">
+                <div class="capsule export-btn" (click)="export('excel')"
+                    *ngIf="dataSource.data && dataSource.data.length>0">
                     <span class="bold-text">Export Excel</span>
                 </div>
-                <div class="capsule export-btn" (click)="export('pdf')">
+                <div class="capsule export-btn" (click)="export('pdf')"
+                    *ngIf="dataSource.data && dataSource.data.length>0">
                     <span class="bold-text">Export PDF</span>
                 </div>
                 <div class="capsule hover-action" [ngClass]="{'danger':dueAmount>0}">
