--- a/src/app/dashboard/inventory/inventory.component.scss
+++ b/src/app/dashboard/inventory/inventory.component.scss
@@ -22,6 +22,7 @@
             box-sizing: border-box;
             display: flex;
             align-items: center;
+            max-width: 600px;
 
             &.min-width-200 {
                 min-width: 200px;
