--- a/src/app/dashboard/delivery-person/delivery-person.component.html
+++ b/src/app/dashboard/delivery-person/delivery-person.component.html
@@ -35,13 +35,16 @@
 
     <div *ngIf="addNewDeliveryBoy" class="details-section">
         <app-new-account (onCancel)="addNewDeliveryBoy=false" userType="deliveryPerson"
-            [editProfileId]="selectedDeliveryPerson?.data?.userId" [isEditingProfile]="isEditingProfile"
-            (onDelete)="onDeleteProfile(selectedDeliveryPerson?.data?.userId)">
+            [editProfileId]="selectedDeliveryPerson?.data?.userId || ''" [isEditingProfile]="isEditingProfile"
+            (onDelete)="onDeleteProfile(selectedDeliveryPerson?.data?.userId || '')">
         </app-new-account>
     </div>
     <div *ngIf="selectedDeliveryPerson && !addNewDeliveryBoy" class="details-section d-flex flex-column">
         <app-user-details [userObject]="selectedDeliveryPerson" [userId]="userId"
             (onProfileEdit)="onProfileEdit()"></app-user-details>
+
+        <app-entry-data-table [deliveryPersonObject]="selectedDeliveryPerson" [isCustomer]="false"
+            class="flex-grow-1"></app-entry-data-table>
     </div>
     <div *ngIf="!selectedDeliveryPerson && !addNewDeliveryBoy"
         class="details-section d-flex justify-content-center align-items-center flex-column">
